--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card{
+    @apply h-72 w-full overflow-hidden relative rounded-t-md shadow-lg;
+}
+
+.badge{
+    @apply absolute top-0 text-sm font-bold bg-black bg-opacity-40 px-3 m-2 text-yellow-400 p-2 rounded-full;
+}
+
+.card .title{
+    @apply absolute bottom-0 bg-gray-700 bg-opacity-50 w-full py-1 px-2;
+}
